Fix badge cropped out style.

--- a/client/styles/tutorial-navigator/tutorial-navigator.styl
+++ b/client/styles/tutorial-navigator/tutorial-navigator.styl
@@ -166,13 +166,21 @@
       position: absolute;
       bottom: -10px;
       right: -10px;
-      border-radius: 50%;
-      width: 38px;
-      height: 38px;
-      background-color: $bg-color-dark;
-      display: flex;
-      justify-content: center;
-      align-items: center;
+      width: 40px;
+      height: 40px;
+
+      > .background,
+      > .badge-icon
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+
+      > .background
+        width: 40px;
+        height: 40px;
+        background-color: $bg-color-dark;
+        border-radius: 50%;
 
     +breakpoint("tablet")
       font-size: 13px;
